# VendorConnect

./: .env.example  .gitattributes  .gitignore  README.md  package.json  run-backend.ps1  run-frontend.ps1
.github/workflows/: ci.yml
apps/api/: .env.example  main.py  prompts.py  pyproject.toml  requirements.txt  vapi.py
apps/api/app/: __init__.py  auth.py  config.py  dependencies.py  exceptions.py  factory.py  middleware.py  rate_limiter.py
apps/api/app/models/: call.py  rfq.py  vendor.py
apps/api/app/routers/: call.py  health.py  rfq.py  vendor.py  webhook.py
apps/api/app/services/: call_manager.py  rfq_parser.py  vendor_discovery.py  webhook_handler.py
apps/api/app/utils/: __init__.py  coerce.py  phone.py  spoken_form.py
apps/api/tests/: __init__.py  conftest.py  test_main.py
apps/api/vendrsurf_backend.egg-info/: PKG-INFO  SOURCES.txt
apps/web/: AGENTS.md  package-lock.json  package.json
apps/web/app/: globals.css
apps/web/components/: error-boundary.tsx  shell.tsx  status-chip.tsx
apps/web/components/dashboard/: dashboard-stats.tsx  rfq-list.tsx
apps/web/components/rfq/: rfq-header.tsx  rfq-stats.tsx  vendor-table.tsx
apps/web/components/screens/: dashboard.tsx  rfq-detail.tsx  rfq-new.tsx  vendor-detail.tsx
apps/web/lib/: constants.ts  data.ts  fetch.ts  types.ts
apps/web/lib/hooks/: use-api.ts  use-supabase-query.ts
apps/web/prisma/: schema.prisma
supabase/: config.toml  seed.sql
supabase/migrations/: 20260419120000_rfq_creation_fields.sql  20260420000001_add_indexes.sql  20260420000002_constraints.sql
